--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -144,6 +144,8 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2024: E. B. L. Mackay, C. J. R. Murphy-Barltrop and \textbf{P. Jonathan}. The SPAR model: a new paradigm for multivariate extremes. Application to joint distributions of metocean variables. J. Offshore Mech. Arct. Eng. 147:011205.
 
+2024: C. Murphy, R. Towe and \textbf{P. Jonathan}. Calibration of medium-range metocean forecasts for the North Sea. (Submitted to Applied Ocean Research in September 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
+
 2024: C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. Inference for multivariate extremes via a semi-parametric angular-radial model. (Accepted by Extremes in August 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).  arXiv:2401.07259.
 
 2024: T. Newman, C. Nemeth, M. J. Jones and \textbf{P. Jonathan}. Probabilistic Inversion Modeling of Gas Emissions: A Gradient-Based MCMC Estimation of Gaussian Plume Parameters. (Submitted to Journal of the Americal Statistical Society in August 2024, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2408.01298.
@@ -154,7 +156,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2024: M. Speers, D. Randell, J. A. Tawn and \textbf{P. Jonathan}. Estimating metocean environments associated with extreme structural response to demonstrate the dangers of environmental contour methods. Ocean Eng. 311:118754. arXiv:2404.16775.
 
-2024: S. Tendijck, D. Randell, G. Feld and \textbf{P. Jonathan}. Practical non-stationary extreme value analysis of peaks over threshold using the generalised Pareto distribution: estimating uncertainties in return values. (Submitted to Ocean Eng. in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
+2024: S. Tendijck, D. Randell, G. Feld and \textbf{P. Jonathan}. Practical non-stationary extreme value analysis of peaks over threshold using the generalised Pareto distribution: estimating uncertainties in return values. (Accepted by Ocean Engineering in September 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
 2024: R. Towe, E. Ross, D. Randell and \textbf{P. Jonathan}. covXtreme : MATLAB software for non-stationary penalised piecewise constant marginal and conditional extreme value models. Environ. Model. Softw. 177:106035. arXiv:2309:17295.
 
