--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -142,6 +142,8 @@ Publications are sorted first by year (in reverse), then by author and finally i
 \setlength{\parskip}{0.2em}
 \vspace{5pt}
 
+2025: E. Mackay, C. J. R. Murphy-Barltrop, J. Richards and \textbf{P. Jonathan}. Deep learning joint extremes of metocean variables using the SPAR model. Preprint to be submitted to the 2025 OMAE conference. arXiv submitted 20.12.24.
+
 2024: C. Leach, K. Ewans and \textbf{P. Jonathan}. Changes over time in the 100-year return value of climate model variables. (Submitted to Ocean Engineering in December 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
 2024: E. B. L. Mackay, C. J. R. Murphy-Barltrop and \textbf{P. Jonathan}. The SPAR model: a new paradigm for multivariate extremes. Application to joint distributions of metocean variables. J. Offshore Mech. Arct. Eng. 147:011205.
